<resources>
    <string name="app_name">Refer Vender</string>
    <string name="hint_vender_name">Vender Name</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_city">City</string>
    <string name="street">Street</string>
    <string name="pincode">Pincode</string>
    <string name="location">location</string>
    <string name="hint_address">address</string>
    <string name="Save">Save</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>
    <string name="hint_message">Message</string>
    <string name="current_location">Current Location</string>
    <string name="hint_subcategory">Sub-Category</string>
    <string name="state">State</string>

    <string-array name="categories">
        <item>Food</item>
        <item>SOS</item>
        <item>Services</item>
        <item>Healthcare</item>
        <item>Shopping</item>
        <item>Markets</item>
        <item>Entertainment</item>
        <item>Education</item>
        <item>Spiritual</item>
        <item>Lifestyle</item>
    </string-array>
</resources>
