<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="in.indianstreets.refervender.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center">

            <!-- Category spinner-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_margin="@dimen/dimen_5dp"
                android:layout_marginLeft="@dimen/dimen_5dp"
                android:layout_marginRight="@dimen/dimen_5dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:text="Category"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:padding="@dimen/dimen_5dp"
                    android:id="@+id/textView" />


                <Spinner
                    android:layout_width="0dp"
                    android:layout_weight="1.8"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/refere_vender_category_spinner"
                    android:entries="@array/categories"/>

            </LinearLayout>
            <EditText
                android:id="@+id/refer_vender_subcategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_subcategory"
                android:maxLines="1"
                android:inputType="textCapSentences"
                android:textColor="@android:color/black"
                android:layout_margin="@dimen/dimen_5dp"
                android:backgroundTint="@color/colorPrimary"/>
            <!-- category spinner end -->
            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:id="@+id/input_layout_name"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
                <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
                <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
                <!--app:hintTextAppearance="@style/TextAppearance.AppCompat.TextInputLayout"-->
                <!--android:textColorHint="@android:color/black">-->

                <EditText
                    android:id="@+id/refer_vender_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_vender_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:layout_margin="@dimen/dimen_5dp"
                    android:textColor="@android:color/black"
                    android:backgroundTint="@color/colorPrimary"/>

            <!--</android.support.design.widget.TextInputLayout>-->

            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:id="@+id/input_layout_mobile"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
                <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
                <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
                <!--app:hintTextAppearance="@style/TextAppearance.AppCompat.TextInputLayout"-->
                <!--android:textColorHint="@android:color/black">-->

                <EditText
                    android:id="@+id/refer_vender_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_mobile"
                    android:maxLines="1"
                    android:layout_margin="@dimen/dimen_5dp"
                    android:inputType="numberDecimal"
                    android:textColor="@android:color/black"
                    android:backgroundTint="@color/colorPrimary"/>

            <!--</android.support.design.widget.TextInputLayout>-->

            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:id="@+id/input_layout_city"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
                <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
                <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
                <!--app:hintTextAppearance="@style/TextAppearance.AppCompat.TextInputLayout"-->
                <!--android:textColorHint="@android:color/black">-->



            <!--</android.support.design.widget.TextInputLayout>-->
            <!-- city spinner end -->




            <!-- sub Category spinner-->


            <EditText
                android:id="@+id/refer_vender_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state"
                android:maxLines="1"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:layout_margin="@dimen/dimen_5dp"
                android:backgroundTint="@color/colorPrimary"/>

            <EditText
                android:id="@+id/refer_vender_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_city"
                android:maxLines="1"
                android:inputType="numberDecimal"
                android:layout_margin="@dimen/dimen_5dp"
                android:textColor="@android:color/black"
                android:backgroundTint="@color/colorPrimary"/>

            <EditText
                android:id="@+id/refer_vender_pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pincode"
                android:layout_margin="@dimen/dimen_5dp"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:backgroundTint="@color/colorPrimary"/>


            <EditText
                    android:id="@+id/refer_vender_street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/street"
                    android:textColor="@android:color/black"
                    android:inputType="textCapSentences"
                    android:layout_margin="@dimen/dimen_5dp"
                    android:maxLines="1"
                    android:backgroundTint="@color/colorPrimary"/>





            <EditText
                android:id="@+id/refer_vender_latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_latitude"
                android:layout_margin="@dimen/dimen_5dp"
                android:textColor="@android:color/black"
                android:inputType="numberDecimal"
                android:maxLines="3"
                android:backgroundTint="@color/colorPrimary"/>

            <EditText
                android:id="@+id/refer_vender_longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_longitude"
                android:layout_margin="@dimen/dimen_5dp"
                android:textColor="@android:color/black"
                android:inputType="number"
                android:maxLines="3"
                android:backgroundTint="@color/colorPrimary"/>


            <EditText
                android:id="@+id/refer_vender_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_message"
                android:layout_margin="@dimen/dimen_5dp"
                android:textColor="@android:color/black"
                android:inputType="textCapSentences"
                android:lines="5"
                android:maxLines="5"
                android:backgroundTint="@color/colorPrimary"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/Save"
                android:layout_margin="@dimen/dimen_5dp"
                android:id="@+id/refer_vender_button"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
